--- a/RogueDungeonCrawler/RogueDungeonCrawler/RogueDungeonCrawler.csproj
+++ b/RogueDungeonCrawler/RogueDungeonCrawler/RogueDungeonCrawler.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Classes\Level.cs" />
     <Compile Include="Classes\Player.cs" />
     <Compile Include="Classes\Room.cs" />
+    <Compile Include="Enum\Direction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
