--- a/RogueDungeonCrawler/RogueDungeonCrawler/RogueDungeonCrawler.csproj
+++ b/RogueDungeonCrawler/RogueDungeonCrawler/RogueDungeonCrawler.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Algorithms.cs" />
     <Compile Include="Classes\Hallway.cs" />
     <Compile Include="Classes\Level.cs" />
     <Compile Include="Classes\Player.cs" />
